@@ -9187,3 +9187,9 @@ data.raw["electric-pole"]["medium-electric-pole"].maximum_wire_distance = 10
 data.raw["boiler"]["boiler"].energy_source.burnt_inventory_size = 1
 data.raw["mining-drill"]["burner-mining-drill"].energy_source.burnt_inventory_size = 1
 data.raw["inserter"]["burner-inserter"].energy_source.burnt_inventory_size = 1
+
+data.raw["logistic-container"]["active-provider-chest"].inventory_size = 64
+data.raw["logistic-container"]["passive-provider-chest"].inventory_size = 64
+data.raw["logistic-container"]["storage-chest"].inventory_size = 64
+data.raw["logistic-container"]["buffer-chest"].inventory_size = 64
+data.raw["logistic-container"]["requester-chest"].inventory_size = 64
